# KittenCast

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
kittencast/: cli.py  compiler.py  text_utils.py
tests/: test_compiler.py  test_text_utils.py
tests/fixtures/: acronyms.txt  dialogue.txt  emails.txt  emojis.txt  heteronyms.txt  loanwords.txt  long_sentence.txt  phone_numbers.txt
